bugfix on sign up, field probably belongs in controller

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
                 <%= devise_error_messages! %>
 
-                <%= f.hidden_field :personhood, 'natural' %>
+                <%= f.hidden_field( :personhood, value: 'natural' ) %>
 
                 <div class="row">
                     <div class="two-thirds column">
