--- a/app/views/users/_edit_user_bank_account.html.erb
+++ b/app/views/users/_edit_user_bank_account.html.erb
@@ -15,7 +15,7 @@
             </div>
         <%- end -%>
 
-        <div><small><%= @user.user_bank_accounts.all.each{|a| pp a} %></small></div>
+        <div><small><%#= @user.user_bank_accounts.all.each{|a| pp a} %></small></div>
 
         <div>
           <%= form_for @user, url: users_path do |f| %>
