add stub code for later adding flags with the textual names of the countries

--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -30,7 +30,7 @@
                 <%#= f.checkbox %> Jeg er norsk statsborger.
                 <%# else %>
                 <%= f.label :nationality, 'Statsborgerskap:' %>
-                <%= f.country_select( "nationality", priority_countries: ["NO", "SE", "DK", "DE"], include_blank: true) %>
+                <%= f.country_select( "nationality", priority_countries: ["NO", "SE", "DK", "DE"], include_blank: true, format: :with_flag) %>
                 <%# end %>
                 Det trenger vi pga av ditt og datt. Vi må forklare hvorfor vi trenger det! FIXME!
             </div>
