--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -1,4 +1,56 @@
 <h1>Om plendit</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, dolorem excepturi expedita inventore laboriosam magnam minima molestiae nemo quidem recusandae similique sunt voluptatem. Ab aliquid eius, ex maxime quam repellat!</p>
 
 <iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
+
+<p class="u-push-down">
+    <strong>«People lend it - plendit».</strong> Det syns vi rett og slett var et
+    bra navn. Med en litt sånn halvgod oversettelse betyr det altså:
+    «folk låner det». Eller leier det om du vil. Vi syns nemlig at folk
+    flest burde leie og låne mer av hverandre. Det må da vel være fryktelig
+    logisk tenker vi i plendit.
+</p>
+
+<p>
+    Hvorfor skal vi eie så mange ting som ofte bare står i ro i boden vår,
+    i garasjen vår eller i hagen vår? Vi bruker jo disse tingene ofte kun
+    en sjelden gang. Ta f.eks. tilhengeren, skiboksen, kanoen, skiboksen din
+    eller det partyteltet som du kjøpte i 2009. Ja, når brukte du egentlig
+    sist det partyteltet ditt?
+</p>
+
+<p>
+    Heldigvis er det ikke bare vi i plendit som har troen på den
+    fremvoksende delingsøkonomien. Folk flest beygnner å synes at det heller
+    er viktig å ha tilgang på ting og tang <strong>når</strong> de trenger det, i
+    stedet for å nødvendigvis <strong>eie</strong> det.
+</p>
+
+<p>
+    På plendit skal du etterhvert kunne leie alt du måtte ha behov for i
+    stedet for å trenge å kjøpe noe som du kanskje kun trenger en gang i ny
+    og ne. Og kanskje du også kan tjene litt penger på de tingene du selv
+    eier, som du ikke bruker så ofte, men som du ikke ønsker å selge fordi
+    du tross alt bruker tingene av og til.
+</p>
+
+<p>
+    Det kommer til å være trygt å bruke plendit. Vi verifiserer alle våre
+    brukere med f.eks. tlfnr. I tillegg gir både leietaker og utleier
+    hverandre en rating som alle skal kunne se i etterkant. Og om ikke det
+    skulle være nok: alle tingene som leies ut kan forsikres automatisk
+    gjennom plendit som har inngått en forsikringsavtale med IF Forsikring.
+</p>
+
+<p>
+    Vi håper og tror at dette er den retningen verden går, noe som vil
+    være langt mer miljøvennlig og som vil være bedre for både din og min
+    lommebok.
+</p>
+
+<p>
+    Så opprett en profil og lei ut bilen din, leiligheten din eller kanskje
+    lei en båt før vinteren er her for fullt? Altså: lei det du trenger og
+    spar penger! Eller ja: <strong>just plendit!</strong>
+</p>
+
+
