Convert prices and amounts to integers internally. requires migration and reindexing.

--- a/app/views/ads/_booking_request_form.html.erb
+++ b/app/views/ads/_booking_request_form.html.erb
@@ -1,5 +1,5 @@
 <div class="booking-request-form">
-    <h3 class="booking-request-form__title"><%= number_to_currency_pretty @ad.price %> per dag</h3>
+    <h3 class="booking-request-form__title"><%= number_to_currency_pretty @ad.safe_price %> per dag</h3>
 
 <!-- // TODO: remove this commented out section
     <div class="row">
