--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -26,7 +26,7 @@
                 <label>
                     <span class="label-body">Pris pr dag</span>
                 </label>
-                <%= f.number_field :price,
+                <%= f.number_field :price_in_h,
                         class: "u-full-width",
                         placeholder: "Kr 0",
                         data: {"payout-source" => ""} %>
