50% is the new 0. Moved center of hero image

--- a/app/assets/stylesheets/_ad_title_image.scss
+++ b/app/assets/stylesheets/_ad_title_image.scss
@@ -15,7 +15,7 @@
     &__bg_img {
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: 50% 0;
+        background-position: 50% 50%;
         height: 100%;
     }
 }
