--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,73 +3,135 @@
 <div class="container">
     <div class="row">
         <div class="six columns">
-            <div class="u-push-down">
-                <h4>Mine annonser</h4>
-                <% unless current_user.ads.empty? %>
-                    <ul>
-                        <% current_user.ads.each do |ad| %>
-                            <li>
-                                <%= link_to ad.safe_title, ad %>
-                                <%= ad.status %>
-                                <small>(oppdatert <%= ad.updated_at.to_formatted_s(:plendit_short_datetime) %>)</small>
-                            </li>
-                        <% end %>
-                    </ul>
-                <% else %>
-                    Du har ikke publisert noen annonser ennå.
-                <% end %>
-                <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get" %>
-            </div>
+            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger"} do %>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+            <% end %>
 
-            <div class="u-push-down">
-                <h4>Utestående vurderinger</h4>
-                <div>Placeholder</div>
-            </div>
+
+
+
+
+
+
+            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger", color: "red"} do %>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+            <% end %>
+
+
+
+
+
+
+            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger", color: "blue"} do %>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+                <a href="#" class="actionable-item u-push-down">
+                    <div class="actionable-item__avatar">
+                        <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    </div>
+                    <div class="actionable-item__main">
+                        <h2 class="actionable-item__title">Jan Erik<br><small>11.09.2015</small></h2>
+                        <p class="actionable-item__body">thule henger morradi er mann</p>
+                    </div>
+                </a>
+            <% end %>
+
+
+
+
+
+
+
+
         </div>
 
         <div class="six columns">
-            <div class="u-push-down">
-                <h4>Forespørsler</h4>
-                <% unless current_user.current_bookings.empty? %>
-                    <ul>
-                        <% current_user.current_bookings.each do |booking| %>
-                            <li>
-                                <%= link_to booking.ad.safe_title, booking %>
-                                <%= booking.status %>
-                                <small>(oppdatert <%= booking.ad.updated_at.to_formatted_s(:plendit_short_datetime) %>)</small>
-                            </li>
-                        <% end %>
-                    </ul>
-                <% else %>
-                        Du har ingen åpne sendte eller mottatte forespørsler
-                <% end %>
-            </div>
 
-            <div class="u-push-down">
-                <h4>Siste meldinger</h4>
-                <% unless current_user.received_messages.empty? %>
-                    <ul>
-                        <% current_user.received_messages.each do |message| %>
-                            <li>
-                                <%= link_to message.booking.ad.safe_title, message.booking %>
-                                <p><%= message.content[0..60] %></p>
-                                <small>(<%= message.created_at.to_formatted_s(:plendit_short_datetime) %>)</small>
-                            </li>
-                        <% end %>
-                    </ul>
-                <% else %>
-                    Du ikke mottatt noen meldinger
-                <% end %>
-            </div>
+            <%= render layout: "bubble_box", locals: {title: "Ubesvarte forespørsler"} do %>
+                it's complicated
+            <% end %>
 
-            <%= render layout: "gray_box", locals: {title: "Flere valg"} do %>
-                <ul>
-                    <li><%= link_to "Verifisering",     "#" %></li>
-                    <li><%= link_to "Tilbakemeldinger", "#" %></li>
-                    <li><%= link_to "See / edit my locations", locations_path %></li>
-                </ul>
+            <%= render layout: "bubble_box", locals: {title: "Siste meldinger"} do %>
+                it's complicated
+            <% end %>
+
+            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger"} do %>
+
+                <a href="#">
+                    <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
+                    <h2>Jan Erik<br><small>11.09.2015</small></h2>
+                    <p>thule henger morradi er mann</p>
+                </a>
+
             <% end %>
         </div>
-
     </div>
 </div>
