--- a/app/views/shared/_hero_image.html.erb
+++ b/app/views/shared/_hero_image.html.erb
@@ -1,6 +1,6 @@
 <div class="ad-title-image">
     <div class="ad-title-image__holder">
-        <% img_style = "background-image: url(#{ad.safe_image_url(:hero)});" %>
+        <% img_style = "background-image: url(#{ad.image_url(:hero)});" %>
         <div class="ad-title-image__bg_img"
              style="<%= img_style %>"></div>
     </div>
