Made bubble boxes look kinda nice

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,5 +1,9 @@
 @import "constants";
 
+$redish: rgb(255, 243, 236);
+$greenish: rgb(193, 236, 193);
+$blueish: rgb(213, 235, 255);
+
 .provider-box {
     height: 80px;
 }
@@ -9,7 +13,30 @@
     padding: $standard-spacing;
 
     &__title {
+        margin-bottom: $standard-spacing / 2;
+    }
 
+    &__handle {
+        position: relative;
+        display: inline-block;
+        border-style: solid;
+        border-width: 0 15px 18px 15px;
+        width: 0;
+        border-color: transparent transparent $greenish transparent;
+        bottom: -6px;
+        left: 24px;
+
+        &--green {
+            // same as default
+        }
+
+        &--blue {
+            border-bottom-color: $blueish;
+        }
+
+        &--red {
+            border-bottom-color: $redish;
+        }
     }
 
     &__body {
