--- a/app/views/application/_bubble_box.html.erb
+++ b/app/views/application/_bubble_box.html.erb
@@ -3,6 +3,7 @@
 %>
 <section class="<%= "bubble-box bubble-box" %>">
     <h4 class="bubble-box__title"><%= title %></h4>
+    <span class="bubble-box__handle <%= "bubble-box__handle--#{color_class}" %>"></span>
     <div class="<%= "bubble-box__body bubble-box__body--#{color_class}" %>">
         <%= yield %>
     </div>
