Fixed price sync

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -35,7 +35,7 @@
                 <label>
                     <span class="label-body">Utbetales til deg</span>
                 </label>
-                <input disabled="true" type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-for="ad[price]">
+                <input disabled="true" type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-for="ad[price_in_h]">
             </div>
         </div>
 
