Added pretty price prop to ad decorator

--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -21,5 +21,5 @@
             <%= render('shared/stars.html', rating: User.find(ad.user.id).calculate_average_rating, small: true ) %>
         </div>
     </div>
-    <div class="search-result-item__price-floater"><%= number_to_currency_pretty ad.price %><br>per&nbsp;dag</div>
+    <div class="search-result-item__price-floater"><%= ad.pretty_price %><br>per&nbsp;dag</div>
 </div>
