--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,12 @@
 
     <%= evil_icons_sprite %>
 
-        <%= javascript_include_tag "//maps.googleapis.com/maps/api/js?key=#{Rails.configuration.x.map.google_maps_js_api_key}" %>
+    <% # todo, split up packages again so we don't load maps on all pages %>
+    <%= javascript_include_tag "//maps.googleapis.com/maps/api/js?key=#{Rails.configuration.x.map.google_maps_js_api_key}" %>
 
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
+    <%= render partial: "google_analytics_tag" %>
 </head>
 <body>
     <header>
