--- a/app/views/shared/_ad_title_box.html.erb
+++ b/app/views/shared/_ad_title_box.html.erb
@@ -7,6 +7,6 @@
         <%= render('shared/stars.html', small: true, rating: ad.user.calculate_average_rating ) %>
     </div>
     <div class="ad-title-box__title-holder">
-        <h3 class="ad-title-box__title"><%= ad.title %></h3>
+        <h3 class="ad-title-box__title"><%= ad.display_title %></h3>
     </div>
 </div>
