--- a/app/views/shared/_slim_promoted_ad.html.erb
+++ b/app/views/shared/_slim_promoted_ad.html.erb
@@ -1,7 +1,7 @@
 <div class="slim-promoted-ad">
     <%= link_to image_tag( ad.safe_image_url(:thumb), alt: "username", class: "slim-promoted-ad__image"), ad %>
 
-    <h6 class="slim-promoted-ad__title"><%= link_to ad.title, ad %></h6>
+    <h6 class="slim-promoted-ad__title"><%= link_to ad.display_title, ad %></h6>
 
     <p class="slim-promoted-ad__body">
         <%= ad.summary %>
