--- a/app/views/ads/_search_result_box.html.erb
+++ b/app/views/ads/_search_result_box.html.erb
@@ -3,6 +3,7 @@
         Vi fant ingen treff! Du kan forsøke å søke i et større område på
         kartet, eller endre på søkekriteriene dine.
     <% else %>
+        <%= paginate @ads %>
         <%= render partial: "search_result_item", collection: @ads, as: 'ad' %>
     <% end %>
 </div>
