Hooked up ajax paging

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -65,7 +65,7 @@
             <script type="text/json" data-location-info><%= @result_json %></script>
         </div>
     </div>
-    <div class="result-container__hits-box" data-controller="resultList" data-result-list>
+    <div class="result-container__hits-box" data-controller="resultList resultPaging" data-result-list>
         <%= render partial: "search_result_box" %>
     </div>
 </div>
