--- a/app/views/ads/_ad_feedback_list_section.html.erb
+++ b/app/views/ads/_ad_feedback_list_section.html.erb
@@ -1,7 +1,7 @@
 <section class="ad-feedback-section" id="feedback">
     <h4>Tilbakemeldinger</h4>
     <% if ad.received_feedbacks.empty? %>
-        <p><%= ad.user.safe_display_name %> har ingen tilbakemeldinger.</p>
+        <p><%= ad.user.display_name %> har ingen tilbakemeldinger.</p>
     <% else %>
         <%= render partial: "shared/feedback_item_box", collection: ad.received_feedbacks, as: 'feedback' %>
     <% end %>
