Ugly bugfix. because having ugly code in just one place isnt enough

--- a/app/views/ads/_owned_ad_item.html.erb
+++ b/app/views/ads/_owned_ad_item.html.erb
@@ -1,3 +1,7 @@
+<%
+   # fixme: this is a bit eew. We need to figure out better how to work with ES results
+   ad = AdDecorator.new(ad)
+%>
 <div class="owned-ad-item">
     <h5><%= link_to( (ad.title || 'Ingen tittel'), edit_ad_path(ad) ) %></h5>
     <p>
