Tweaked text on insert ad page

--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -16,7 +16,7 @@
 
     <h4>Betaling</h4>
     <p>
-        Betalingen skjer trygt gjennom PayEx, og og det skjer
+        Betalingen skjer trygt gjennom plendit, og og det skjer
         aldri en transaksjon før utleier og leietaker er fornøyd.
     </p>
 
