Fixed unclosed tag

--- a/app/views/ads/_ad_location_map.html.erb
+++ b/app/views/ads/_ad_location_map.html.erb
@@ -3,6 +3,6 @@
         <div class="ad-location-map__map"
              data-geolocation="<%= @ad.location.lat %>,<%= @ad.location.lon %>"
              data-controller="adMap">
-        <div>
+        </div>
     </section>
 <% end %>
