--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -4,7 +4,9 @@
         <span class="ad-booking-box__period">per døgn</span>
     </h4>
 
-    <div class="ad-booking-box__calendar-holder" data-controller="listingCalendar"></div>
+    <div class="ad-booking-box__calendar-holder" data-controller="listingCalendar">
+        <%= render partial: "unavailability", locals: {ad: @ad} %>
+    </div>
 
     <div class="ad-booking-box__button-holder">
         <% if ad.published? && !current_user_is_owner(ad) %>
