--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -12,7 +12,7 @@
                         { text: "Dine annonser",     path: users_ads_path },
                         { text: "Dine forespørsler", path: bookings_path },
                         { text: "Leiehistorikk",     path: "#" },
-                        { text: "Dine favoritt annonser", path: users_favorite_ads_path },
+                        { text: "Favoritter",        path: users_favorite_ads_path },
                         { text: "Din profil",        path: users_edit_users_path },
                     ]
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
